--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "migrate": "npx drizzle-kit migrate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.5",
     "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
