--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "pg": "^8.13.3",
@@ -37,6 +38,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/dom-speech-recognition": "^0.0.4",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
