--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
